<resources>
    <string name="app_name">MusicShop</string>
    <string name="your_name">Your name</string>
    <string name="sale">Sale -30%</string>
    <string name="select_item">Select item</string>
    <string name="order_price">Order price:</string>
    <string name="currency">$</string>
    <string name="quantity">Quantity:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity_value">0</string>
    <string name="dollar">$</string>
    <string name="order_info">Order info:</string>
    <string name="user_name">User name:</string>
    <string name="goods_title">Goods title:</string>
    <string name="default_price">0</string>
    <string name="price">Price:</string>
    <string name="submit_order">Submit order</string>
</resources>