<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:fontFamily="monospace"
            android:text="@string/sale"
            android:textColor="@color/white"
            android:textSize="35sp"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_item"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/guitar_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/guitar"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/order_price"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_title_text_view"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/quantity_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/price_text_view"
            android:layout_marginStart="215dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/minus_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/quantity_title_text_view"
            android:layout_toEndOf="@id/price_text_view"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/minus"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_title_text_view"
            android:layout_toEndOf="@id/minus_button"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/quantity_value"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/plus_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/quantity_title_text_view"
            android:layout_toEndOf="@id/quantity_text_view"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/plus"/>
    </RelativeLayout>

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_to_cart"/>

</LinearLayout>